# Openenv-finance-categorizer

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  EVALUATION.md  PLAN.md  PROGRESS.md  PROJECT.md  PROJECT_WALKTHROUGH.md  README.md  TASKS.md  TESTING.md  inference.py  openenv.yaml  pyproject.toml  pytest.ini  raw.md
benchmark/: README.md  benchmark.py
docs/development_history/: SUBMISSION_REQUIREMENTS.md  TESTING.md
domains/: README.md
domains/finance/: .gitkeep
domains/medical/: .gitkeep
finance_env/: README.md  __init__.py  client.py  grading.py  models.py  pyproject.toml
finance_env/server/: Dockerfile  app.py  finance_env_environment.py
product/: README.md  product_server.py
server/: __init__.py  app.py
tests/: test_finance_environment.py
